# amp

./: .gitignore  Cargo.toml  LICENSE  PLUGIN_GUIDE.md  README.md  justfile
amp-api/: Cargo.toml
amp-api/src/: error.rs  lib.rs
src/: app_state.rs  discord.rs  fbo.rs  image_cache.rs  jellyfin.rs  login_cache.rs  main.rs  navigation.rs  player.rs  plugin_manager.rs
ui/: app-window.slint  player.slint  trackselector.slint
