[package]
name = "amp"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
libmpv-sys = "3.1.0"
slint = { version = "1.14.1", default-features = false, features = ["backend-winit", "renderer-software", "compat-1-2"] }
libc = "0.2"
reqwest = { version = "0.12", features = ["json"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
image = "0.25"
futures = "0.3"
tokio = { version = "1", features = ["full"] }
directories = "6.0.0"
async-trait = "0.1"
libloading = "0.8"
amp-api = { path = "./amp-api" }

[build-dependencies]
slint-build = "1.14.1"

[profile.release]
codegen-units = 1
lto = true
