[package]
name = "amp"
version = "0.1.0"
edition = "2024"

authors = ["tfo-dot"]
description = "A player for the anime"
repository = "https://github.com/amp-dot/amp"
license = "MIT"

[package.metadata.aur]
files = [["amp.desktop", "/usr/share/applications/amp.desktop"]]

[dependencies]
libmpv-sys = "3.1.0"
slint = { version = "1.16.1", default-features = false, features = ["backend-winit", "renderer-femtovg", "compat-1-2"] }
glow = "0.17.0"
libc = "0.2.186"
reqwest = { version = "0.13.2", features = ["json"] }
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
image = "0.25.10"
futures = "0.3.32"
tokio = { version = "1.52.1", features = ["full"] }
directories = "6.0.0"
async-trait = "0.1.89"
libloading = "0.9.0"
urlencoding = "2.1.3"
discord-rich-presence = "1.1.0"
thiserror = "2.0.18"
amp-api = { path = "./amp-api" }

[build-dependencies]
slint-build = "1.16.1"

[profile.release]
codegen-units = 1
lto = true
